# engine-sim-android

./: .gitignore  LICENSE  PROGRESS.md  README.md
.github/workflows/: android.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/com/enginesim/: EngineSimInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/presets/: inline4.json  v12.json  v6.json  v8.json
android/app/src/main/cpp/: CMakeLists.txt  JniBridge.cpp  JniBridge.h  aaudio_engine.cpp  aaudio_engine.h  android_audio_output.cpp  android_audio_output.h
android/app/src/main/java/com/enginesim/: EngineSimLibrary.kt
android/app/src/main/java/com/enginesim/app/: AudioEngine.kt  EngineSimLibrary.kt  MainActivity.kt
android/app/src/main/java/com/enginesim/app/ui/theme/: Theme.kt
android/app/src/main/jni/: engine_sim_jni.cpp  engine_sim_jni.h
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/cpp/: CMakeLists.txt  test_engine.cpp  test_piston.cpp  test_synthesizer.cpp
android/app/src/test/java/com/enginesim/: EngineSimLibraryTest.kt
android/lib/: build.gradle  proguard-rules.pro
core/: CMakeLists.txt
core/include/engine_sim/: AudioOutputInterface.h  combustion_chamber.h  constants.h  cylinder_head.h  delta.h  scs.h  units.h
core/src/engine_sim/: audio_buffer.cpp  camshaft.cpp  combustion_chamber.cpp  connecting_rod.cpp  convolution_filter.cpp  crankshaft.cpp  cylinder_bank.cpp  cylinder_head.cpp  delay_filter.cpp  derivative_filter.cpp  direct_throttle_linkage.cpp  dynamometer.cpp  engine.cpp  exhaust_system.cpp  feedback_comb_filter.cpp  filter.cpp  fuel.cpp  function.cpp  gas_system.cpp  gaussian_filter.cpp  governor.cpp  ignition_module.cpp  impulse_response.cpp  intake.cpp  jitter_filter.cpp  leveling_filter.cpp  low_pass_filter.cpp  part.cpp  piston.cpp  piston_engine_simulator.cpp  simulator.cpp  standard_valvetrain.cpp  starter_motor.cpp  synthesizer.cpp  throttle.cpp  transmission.cpp  utilities.cpp  valvetrain.cpp  vehicle.cpp  vehicle_drag_constraint.cpp  (+1 more)
docs/: API.md  ARCHITECTURE.md  BUILD.md  CODE_REVIEW.md  OPTIMIZATION.md  TESTING.md
